crates/analyzer/src/surface/lower/snapshots/analyzer__surface__lower__tests__binder_list.snap
---
source: crates/analyzer/src/surface/lower/tests.rs
expression: "(value_declarations, let_names)"
---
(
    [
        ValueDeclaration {
            id: Idx::<ValueGroup>(0),
            name: Name(
                "const",
            ),
            annotation: None,
            equations: [
                ValueEquation {
                    binders: [
                        Idx::<Binder>(0),
                        Idx::<Binder>(1),
                    ],
                    binding: Unconditional {
                        where_expr: WhereExpr {
                            expr_id: Idx::<Expr>(0),
                            let_bindings: [],
                        },
                    },
                },
            ],
        },
        ValueDeclaration {
            id: Idx::<ValueGroup>(1),
            name: Name(
                "inLet",
            ),
            annotation: None,
            equations: [
                ValueEquation {
                    binders: [],
                    binding: Unconditional {
                        where_expr: WhereExpr {
                            expr_id: Idx::<Expr>(3),
                            let_bindings: [],
                        },
                    },
                },
            ],
        },
    ],
    [
        LetName {
            name: Name(
                "const",
            ),
            annotation: None,
            equations: [
                LetNameEquation {
                    binders: [
                        Idx::<Binder>(2),
                        Idx::<Binder>(3),
                    ],
                    binding: Unconditional {
                        where_expr: WhereExpr {
                            expr_id: Idx::<Expr>(1),
                            let_bindings: [],
                        },
                    },
                },
            ],
        },
    ],
)
