crates/analyzer/src/surface/lower/snapshots/analyzer__surface__lower__tests__types.snap
---
source: crates/analyzer/src/surface/lower/tests.rs
expression: types
---
[
    Application(
        Idx::<Type>(0),
        [
            Idx::<Type>(1),
        ],
    ),
    Arrow(
        [
            Idx::<Type>(3),
        ],
        Idx::<Type>(4),
    ),
    Constrained(
        Idx::<Type>(8),
        Idx::<Type>(9),
    ),
    Constructor(
        Qualified {
            prefix: None,
            value: Name(
                "Constructor",
            ),
        },
    ),
    Forall(
        [
            Name(
                Name(
                    "a",
                ),
            ),
            Kinded(
                Name(
                    "b",
                ),
                Idx::<Type>(12),
            ),
        ],
        Idx::<Type>(16),
    ),
    Parenthesized(
        Idx::<Type>(20),
    ),
    Variable(
        Name(
            "a",
        ),
    ),
]
