crates/analyzer/src/surface/lower/snapshots/analyzer__surface__lower__tests__value_declarations.snap
---
source: crates/analyzer/src/surface/lower/tests.rs
expression: value_declarations
---
[
    ValueDeclaration {
        id: Idx::<ValueGroup>(0),
        name: Name(
            "const",
        ),
        annotation: Some(
            Idx::<Type>(4),
        ),
        equations: [
            ValueEquation {
                binders: [
                    Idx::<Binder>(0),
                    Idx::<Binder>(1),
                ],
                binding: Unconditional {
                    where_expr: WhereExpr {
                        expr_id: Idx::<Expr>(0),
                        let_bindings: [],
                    },
                },
            },
        ],
    },
    ValueDeclaration {
        id: Idx::<ValueGroup>(1),
        name: Name(
            "basicGuards",
        ),
        annotation: None,
        equations: [
            ValueEquation {
                binders: [],
                binding: Guarded {
                    guarded_exprs: [
                        GuardedExpr {
                            pattern_guards: [
                                PatternGuard {
                                    binder_id: None,
                                    expr_id: Idx::<Expr>(1),
                                },
                            ],
                            where_expr: WhereExpr {
                                expr_id: Idx::<Expr>(2),
                                let_bindings: [],
                            },
                        },
                        GuardedExpr {
                            pattern_guards: [
                                PatternGuard {
                                    binder_id: None,
                                    expr_id: Idx::<Expr>(3),
                                },
                            ],
                            where_expr: WhereExpr {
                                expr_id: Idx::<Expr>(4),
                                let_bindings: [],
                            },
                        },
                    ],
                },
            },
        ],
    },
    ValueDeclaration {
        id: Idx::<ValueGroup>(2),
        name: Name(
            "bindGuard",
        ),
        annotation: None,
        equations: [
            ValueEquation {
                binders: [],
                binding: Guarded {
                    guarded_exprs: [
                        GuardedExpr {
                            pattern_guards: [
                                PatternGuard {
                                    binder_id: Some(
                                        Idx::<Binder>(2),
                                    ),
                                    expr_id: Idx::<Expr>(5),
                                },
                            ],
                            where_expr: WhereExpr {
                                expr_id: Idx::<Expr>(6),
                                let_bindings: [],
                            },
                        },
                        GuardedExpr {
                            pattern_guards: [
                                PatternGuard {
                                    binder_id: Some(
                                        Idx::<Binder>(3),
                                    ),
                                    expr_id: Idx::<Expr>(7),
                                },
                            ],
                            where_expr: WhereExpr {
                                expr_id: Idx::<Expr>(8),
                                let_bindings: [],
                            },
                        },
                    ],
                },
            },
        ],
    },
    ValueDeclaration {
        id: Idx::<ValueGroup>(3),
        name: Name(
            "mixedGuard",
        ),
        annotation: None,
        equations: [
            ValueEquation {
                binders: [],
                binding: Guarded {
                    guarded_exprs: [
                        GuardedExpr {
                            pattern_guards: [
                                PatternGuard {
                                    binder_id: Some(
                                        Idx::<Binder>(4),
                                    ),
                                    expr_id: Idx::<Expr>(9),
                                },
                                PatternGuard {
                                    binder_id: None,
                                    expr_id: Idx::<Expr>(10),
                                },
                            ],
                            where_expr: WhereExpr {
                                expr_id: Idx::<Expr>(12),
                                let_bindings: [
                                    Name {
                                        id: Idx::<LetName>(0),
                                    },
                                ],
                            },
                        },
                    ],
                },
            },
        ],
    },
]
